DesignProject/tests/error/test02.src
// type mismatch in assignment
func testTypeMismatch() -> void {
    local x : integer;
    local y : float;
    x := 10;
    y := 5.5;
    x := y;
    write(x);
}

